重構購物車模組

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   </ul>
                   
                   <section class="position-absolute start-0 end-0 bottom-0 mb-0 bg-white px-3 py-4" >
-                    <h3 class="fw-bold mb-3">總計: {{finalTotal.toLocaleString()}}元 </h3>  
+                    <h3 class="fw-bold mb-3">總計: {{propShoppingCart.final_total}}元 </h3>  
 
                     <a class="btn btn-dark w-100" href="./cart.html">前往購物車</a>
                   </section>
