--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 
 
-            <shopping-cart :prop-shopping-cart="cartsList" @emit-change-qty="on_changeQty"
-                @emit-delete-cart="on_deleteCart"></shopping-cart>
+            <shopping-cart :prop-shopping-cart="cartsList" @emit-change-qty="On_changeQty"
+                @emit-delete-cart="On_deleteCart"></shopping-cart>
         </section>
     </div>
 
