--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 <body>
 
     <div id="vue-product-list">
+        <header class=" bg-white sticky-top">
+            <section class="container d-flex justify-content-between align-items-center">
+                <h1 class="mb-0">首頁</h1>
+                <ul class="mb-0">
+                    <li><a href="#" class="d-block" data-bs-toggle="offcanvas" data-bs-target="#shpping-cart">購物車 <i
+                                class="bi bi-cart-fill"></i></a></li>
+                </ul>
 
-
-        <header class="container d-flex justify-content-between position-sticky top-0 bg-white">
-            <h1>首頁</h1>
-            <ul>
-                <li><a href="#" class="d-block" data-bs-toggle="offcanvas" data-bs-target="#shpping-cart">購物車 <i
-                            class="bi bi-cart-fill"></i></a></li>
-            </ul>
+            </section>
         </header>
-
-
-
         <section class="container">
             <h2>產品</h2>
 
@@ -167,5 +165,3 @@
 </body>
 
 </html>
-
-
